--- a/configs/base.conf
+++ b/configs/base.conf
@@ -38,7 +38,7 @@
 # --restrict-filenames  # Safer filenames across filesystems
 
 
---output-na-placeholder ""    Placeholder for unavailable fields in --output (default: "NA")
+# --output-na-placeholder ""    Placeholder for unavailable fields in --output (default: "NA")
 # --skip-download                  
 # --simulate
 
