--- a/configs/base.conf
+++ b/configs/base.conf
@@ -15,7 +15,7 @@
 --ignore-errors
 --continue # Force resume of partially downloaded files
 --verbose
---concurrent-fragments 5 # Number of fragments of a dash/hlsnative video that should be download concurrently (default is 1)
+--concurrent-fragments 10 # Number of fragments of a dash/hlsnative video that should be download concurrently (default is 1)
 --download-archive _archive.txt
 --no-warnings # Ignore warnings
 --console-title # Display progress in console titlebar
@@ -26,6 +26,7 @@
 --sub-langs "en.*,en-US,en-GB,en"
 --convert-subs srt
 --embed-subs
+--write-auto-sub
 
 # Metadata & Information
 --write-description
